# personal_rag

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
