[project]
name = "personal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.2",
    "huggingface-hub>=0.27.1",
    "langchain-community>=0.3.14",
    "langchain-huggingface>=0.1.2",
    "langchain>=0.3.14",
    "llama-cpp-python>=0.3.6",
    "ruff>=0.9.0",
    "sentence-transformers>=3.3.1",
    "unstructured[md]>=0.16.12",
]
